# btc-challenge

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
.ci/: Dockerfile  docker-compose.yaml  entrypoint.sh
alembic/: env.py
alembic/versions/: 2026_01_21_1937-902739f1d241_init.py  2026_01_22_2024-b35e8d2974e7_add_users_is_verified.py  2026_01_23_0017-c4e9f8a12b3d_add_events_tables.py  2026_01_23_1627-ed2d0c957372_add_telegram_video_id_column.py  2026_01_24_2037-a3f8e9d4b2c1_remove_end_at_and_initial_notification.py  2026_01_24_2113-3ee8935898ed_add_chats_table.py  2026_02_07_1720-81d335492936_add_datetime_timezone.py
btc_challenge/: config.py  container.py  environment.py  main.py  models.py  tasks.py
btc_challenge/chats/domain/: entity.py  repository.py
btc_challenge/chats/presentation/: router.py
btc_challenge/events/domain/: entity.py  repository.py
btc_challenge/events/presentation/: router.py  states.py
btc_challenge/push_ups/domain/: entity.py  repository.py
btc_challenge/push_ups/presentation/: router.py  states.py
btc_challenge/shared/: date.py  enums.py  errors.py  providers.py  storage.py  utils.py
btc_challenge/shared/presentation/: checks.py  commands.py  response.py
btc_challenge/shared/tasks/: daily_notification.py  event_daily_notification.py  event_notification.py  event_reminder.py  send_to_groups.py
btc_challenge/stored_object/domain/: entity.py  repository.py
btc_challenge/users/domain/: entity.py  repository.py
btc_challenge/users/presentation/: router.py  verification_router.py
(+39 files in other folders)
